feat: address endpoints
